Changelog
=========

2.0b1 - Unreleased
------------------


2.0a1 - 2009-11-14
------------------

- Specified package dependencies and assorted cleanups.
  [hannosch]

- Avoid a deprecation warning for calling the ``actions`` method from the
  context_state state view without passing in an action category.
  [hannosch]

- Updated action and icon handling in the actions menu to take advantage of
  the icon being stored on the action itself.
  [hannosch]

- Added support for the new add_view_expr property available on FTIs. This
  can be used to construct a URL for add views.
  [optilude]

1.1.7 - 2009-03-07
------------------

- Made a test independent of an internal sort order.
  [hannosch]

- Escape the title of the defaultpage in the DisplayMenu. This fixes a
  potential xss attack and http://dev.plone.org/plone/ticket/8377.
  [csenger]

- Added the prefix "folder-" to the CSS id of the folder part of the view
  contentmenu. This closes http://dev.plone.org/plone/ticket/8375.
  [realefab]


1.1.6 2008-10-07
----------------

- Fix on factories menu, showing constrain options only when there are 
  types to constrain. This closes http://dev.plone.org/plone/ticket/8213.
  [igbun]

- Fix non XML syntax compliant ids in contentmenus. This closes
  http://dev.plone.org/plone/ticket/8195
  [garbas,calvinhp]


1.1.5 2008-08-18
----------------

- Add a span with a "noMenuAction" class around disable menus, allowing them
  to be styled.
  [wichert]


1.1.3
-----

- Adjusted tests to reflect new behavior introduced by the last change.
  [hannosch]

- Do not show the display menu if it is disabled (i.e. there is an index_html
  item in the folder). The previous behavior was confusing for users: the
  description with the hint to remove the index_html object was never shown
  and users only got a unusable menu item. The new behavior makes the display
  menu consistent with other parts of the Plone UI.
  [wichert]
